added a message above the method